Automatically synchronize prepared demo uploads and add Python API demo
